--- a/HuaShanApp/utils/src/main/res/values/attrs.xml
+++ b/HuaShanApp/utils/src/main/res/values/attrs.xml
@@ -12,4 +12,14 @@
     <declare-styleable name="MyViewPager">
         <attr name="isVertical" format="boolean" />
     </declare-styleable>
+
+    <declare-styleable name="FloatLabeledEditText">
+        <attr name="fletTextAppearance" format="reference" />
+        <attr name="fletPadding" format="reference|dimension" />
+        <attr name="fletPaddingLeft" format="reference|dimension" />
+        <attr name="fletPaddingTop" format="reference|dimension" />
+        <attr name="fletPaddingRight" format="reference|dimension" />
+        <attr name="fletPaddingBottom" format="reference|dimension" />
+        <attr name="fletBackground" format="reference|color" />
+    </declare-styleable>
 </resources>
