--- a/HuaShanApp/app/src/main/res/layout/activity_mysettings.xml
+++ b/HuaShanApp/app/src/main/res/layout/activity_mysettings.xml
@@ -162,7 +162,8 @@
                 android:layout_width="match_parent"
                 app:layout_heightPercent="9%"
                 app:layout_marginTopPercent="28%"
-                android:background="#fff">
+                android:background="#fff"
+                android:onClick="@{handler.toRealname}">
 
                 <TextView
                     android:layout_width="wrap_content"
