--- a/HuaShanApp/app/src/main/res/layout/activity_mysettings2.xml
+++ b/HuaShanApp/app/src/main/res/layout/activity_mysettings2.xml
@@ -29,15 +29,14 @@
                 android:id="@+id/title_back"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:paddingLeft="20dp"
                 android:onClick="@{handler.onBack}"
                 >
 
                 <ImageView
-
                     app:layout_widthPercent="7%"
                     app:layout_heightPercent="60%"
                     android:layout_centerVertical="true"
+                    app:layout_marginLeftPercent="5%"
                     android:layout_height="match_parent"
                     android:src="@drawable/back_b"
                     />
@@ -59,14 +58,17 @@
                 android:id="@+id/add_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:paddingRight="20dp">
+                >
 
-                <ImageView
-
+                <TextView
                     android:layout_width="0dp"
-                    app:layout_widthPercent="5%"
+                    app:layout_widthPercent="10%"
                     android:layout_height="match_parent"
-
+                    app:layout_marginRightPercent="6%"
+                    android:gravity="center"
+                    android:text="保存"
+                    android:textSize="@dimen/title_text_size"
+                    android:onClick="@{handler.saveData}"
                     />
             </android.support.percent.PercentRelativeLayout>
         </LinearLayout>
@@ -80,14 +82,61 @@
 
             >
 
-
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="MysettingsActivity2"
+                android:layout_width="match_parent"
+                app:layout_heightPercent="5%"
+                app:layout_marginLeftPercent="5%"
+                android:gravity="center_vertical"
+                android:text="设置后,其他人将看到你的昵称"
+                android:textSize="@dimen/MysettingsActivity2_text_size_1"
                 />
 
+            <android.support.percent.PercentFrameLayout
+                android:layout_width="match_parent"
+                app:layout_heightPercent="15%"
+                app:layout_marginTopPercent="5%"
+                android:background="#fff">
 
+                <ImageView
+                    android:id="@+id/clean"
+                    app:layout_widthPercent="6%"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/clean_icon"
+                    app:layout_marginRightPercent="5%"
+                    android:layout_gravity="right"
+                    android:visibility="gone"
+                    android:onClick="@{handler.cleanContent}"/>
+
+                <com.example.utils.custom.FloatLabeledEditText.FloatLabeledEditText
+                    android:id="@+id/fet"
+                    app:layout_widthPercent="84%"
+                    app:layout_heightPercent="55%"
+                    app:layout_marginTopPercent="15%"
+                    app:layout_marginLeftPercent="5%"
+                    >
+                    <EditText
+                        android:id="@+id/nickname_ed"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center_vertical"
+                        android:maxLength="12"
+                        android:hint="昵称"
+                        android:background="#00ffffff"
+                        android:textSize="15dp"
+                        />
+                </com.example.utils.custom.FloatLabeledEditText.FloatLabeledEditText>
+
+            </android.support.percent.PercentFrameLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                app:layout_heightPercent="8%"
+                app:layout_marginLeftPercent="5%"
+                app:layout_marginTopPercent="20%"
+                android:gravity="center_vertical"
+                android:text="4-20字符,可由中英文、数字、“_”、“-”组成"
+                android:textSize="@dimen/MysettingsActivity2_text_size_1"
+                />
 
         </android.support.percent.PercentFrameLayout>
     </android.support.percent.PercentRelativeLayout>
