--- a/HuaShanApp/app/src/main/res/values/colors.xml
+++ b/HuaShanApp/app/src/main/res/values/colors.xml
@@ -77,8 +77,8 @@
     <color name="SMSauthenticationView_text_color_4">#9e9e9e</color>
     <color name="SMSauthenticationView_text_color_5">#9e9e9e</color>
 
-    <!---->
-
+    <!--MysettingsActivity2-->
+    <color name="MysettingsActivity2_text_color_1">#505050</color>
 
     <!--SpringIndicator-->
     <color name="white">#ffffff</color>
