--- a/HuaShanApp/app/src/main/res/values/dimens.xml
+++ b/HuaShanApp/app/src/main/res/values/dimens.xml
@@ -65,5 +65,7 @@
     <dimen name="setup_pa1_text_size">15dp</dimen>
     <dimen name="setup_pa2_text_size">18dp</dimen>
 
+    <!--MysettingsActivity2-->
+    <dimen name="MysettingsActivity2_text_size_1">13dp</dimen>
 
 </resources>
