--- a/HuaShanApp/utils/src/main/res/values/styles.xml
+++ b/HuaShanApp/utils/src/main/res/values/styles.xml
@@ -12,4 +12,8 @@
         <item name="radius">10dp</item>
     </style>
 
+    <style name="floatlabelededittext">
+        <item name="android:textColor">#FF0000</item>
+    </style>
+
 </resources>
