--- a/HuaShanApp/app/src/main/res/values/colors.xml
+++ b/HuaShanApp/app/src/main/res/values/colors.xml
@@ -80,6 +80,10 @@
     <!--MysettingsActivity2-->
     <color name="MysettingsActivity2_text_color_1">#505050</color>
 
+    <!--AuthenticatedActivity-->
+    <color name="AuthenticatedActivity_text_color_1">#505050</color>
+    <color name="AuthenticatedActivity_text_color_2">#adadad</color>
+
     <!--SpringIndicator-->
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
