--- a/HuaShanApp/app/src/main/res/layout/activity_authenticated.xml
+++ b/HuaShanApp/app/src/main/res/layout/activity_authenticated.xml
@@ -15,71 +15,162 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         >
-        <!--<LinearLayout-->
-        <!--android:id="@+id/title_ll"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:background="@color/title_color"-->
-        <!--android:gravity="center_vertical"-->
-        <!--android:orientation="horizontal"-->
-        <!--app:layout_heightPercent="8%"-->
-        <!--&gt;-->
+        <LinearLayout
+            android:id="@+id/title_ll"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            app:layout_heightPercent="8%"
+            android:background="#fff"
+            >
 
-        <!--<android.support.percent.PercentRelativeLayout-->
-        <!--android:id="@+id/title_back"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:paddingLeft="20dp">-->
+            <android.support.percent.PercentRelativeLayout
+                android:id="@+id/title_back"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:onClick="@{handler.onBack}"
+                >
 
-        <!--<ImageView-->
+                <ImageView
+                    app:layout_widthPercent="5%"
+                    app:layout_heightPercent="60%"
+                    android:layout_centerVertical="true"
+                    app:layout_marginLeftPercent="5%"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/cha"
+                    />
 
-        <!--android:layout_width="0dp"-->
-        <!--app:layout_widthPercent="7%"-->
-        <!--android:layout_height="match_parent"-->
-        <!--/>-->
+            </android.support.percent.PercentRelativeLayout>
 
-        <!--</android.support.percent.PercentRelativeLayout>-->
-        <!--<TextView-->
-        <!--android:id="@+id/title_text"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_weight="1"-->
-        <!--android:gravity="center"-->
-        <!--android:text="申请"-->
-        <!--android:textColor="#fff"-->
-        <!--android:textSize="@dimen/title_text_size"/>-->
+            <TextView
+                android:id="@+id/title_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:paddingLeft="20dp"
+                android:text="实名认证"
+                android:textColor="#272636"
+                android:textSize="@dimen/title_text_size"/>
 
-        <!--<android.support.percent.PercentRelativeLayout-->
-        <!--android:id="@+id/add_btn"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:paddingRight="20dp">-->
+            <android.support.percent.PercentRelativeLayout
+                android:id="@+id/add_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                >
 
-        <!--<ImageView-->
-
-        <!--android:layout_width="0dp"-->
-        <!--app:layout_widthPercent="5%"-->
-        <!--android:layout_height="match_parent"-->
-
-        <!--/>-->
-        <!--</android.support.percent.PercentRelativeLayout>-->
-        <!--</LinearLayout>-->
+                <TextView
+                    android:layout_width="0dp"
+                    app:layout_widthPercent="10%"
+                    android:layout_height="match_parent"
+                    app:layout_marginRightPercent="6%"
+                    android:gravity="center"
+                    android:textSize="@dimen/title_text_size"
+                    />
+            </android.support.percent.PercentRelativeLayout>
+        </LinearLayout>
 
         <android.support.percent.PercentFrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@+id/title_ll"
             app:layout_heightPercent="100%"
-            android:background="#fff"
+            android:background="@color/all_activity_background"
 
             >
+            <android.support.percent.PercentFrameLayout
+                android:layout_width="match_parent"
+                app:layout_heightPercent="34%"
+                android:background="#66b3ff">
+
+                <ImageView
+                    app:layout_widthPercent="20%"
+                    app:layout_heightPercent="40%"
+                    android:layout_gravity="center_horizontal"
+                    app:layout_marginTopPercent="20%"
+                    android:background="#CFA"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_marginTopPercent="66%"
+                    android:layout_gravity="center_horizontal"
+                    android:text="您已通过实名认证"
+                    android:textColor="#fff"/>
+            </android.support.percent.PercentFrameLayout>
+
+            <!--资料-->
+
+            <!--我的名字-->
+            <android.support.percent.PercentFrameLayout
+                android:layout_width="match_parent"
+                app:layout_heightPercent="10%"
+                app:layout_marginTopPercent="34%"
+                android:background="#fff">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    app:layout_marginLeftPercent="5%"
+                    android:text="真实姓名"
+                    android:textSize="@dimen/AuthenticatedActivity_text_size_1"
+                    android:textColor="@color/AuthenticatedActivity_text_color_1"/>
 
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="AuthenticatedActivity"
-                />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical|right"
+                    app:layout_marginRightPercent="5%"
+                    android:text="*蕙"
+                    android:textSize="@dimen/AuthenticatedActivity_text_size_1"
+                    android:textColor="@color/AuthenticatedActivity_text_color_2"/>
+
+
+            </android.support.percent.PercentFrameLayout>
+
+            <!--身份证-->
+            <android.support.percent.PercentFrameLayout
+                android:layout_width="match_parent"
+                app:layout_heightPercent="10%"
+                app:layout_marginTopPercent="44.1%"
+                android:background="#fff">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    app:layout_marginLeftPercent="5%"
+                    android:text="身份证"
+                    android:textSize="@dimen/AuthenticatedActivity_text_size_1"
+                    android:textColor="@color/AuthenticatedActivity_text_color_1"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical|right"
+                    app:layout_marginRightPercent="5%"
+                    android:text="5****************7"
+                    android:textSize="@dimen/AuthenticatedActivity_text_size_1"
+                    android:textColor="@color/AuthenticatedActivity_text_color_2"/>
+
+            </android.support.percent.PercentFrameLayout>
+
+
+            <android.support.v7.widget.CardView
+                xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                app:layout_widthPercent="90%"
+                app:layout_heightPercent="20%"
+                app:layout_marginTopPercent="55%"
+                android:layout_gravity="center_horizontal"
+                app:cardBackgroundColor="#a0930000"
+                android:background="#a0930000">
+
+
+
+            </android.support.v7.widget.CardView>
 
 
 
