--- a/HuaShanApp/app/src/main/res/layout/activity_setup.xml
+++ b/HuaShanApp/app/src/main/res/layout/activity_setup.xml
@@ -212,7 +212,8 @@
                 android:layout_width="match_parent"
                 app:layout_heightPercent="9%"
                 app:layout_marginTopPercent="39%"
-                android:background="#fff">
+                android:background="#fff"
+                android:onClick="@{handler.toSecurity}">
 
                 <TextView
                     android:layout_width="wrap_content"
