--- a/HuaShanApp/app/src/main/res/layout/activity_help.xml
+++ b/HuaShanApp/app/src/main/res/layout/activity_help.xml
@@ -4,11 +4,11 @@
     <data>
         <variable
             name="entity"
-            type="com.karazam.huashanapp.my.about.main.model.databinding.AboutEntity"
+            type="com.karazam.huashanapp.my.help.main.model.databinding.HelpEntity"
             ></variable>
         <variable
             name="handler"
-            type="com.karazam.huashanapp.my.about.main.viewmodel.AboutViewModel.AboutViewModel"
+            type="com.karazam.huashanapp.my.help.main.viewmodel.HelpViewModel"
             ></variable>
     </data>
     <android.support.percent.PercentRelativeLayout
@@ -51,7 +51,7 @@
                 android:layout_weight="1"
                 android:gravity="center_vertical"
                 android:paddingLeft="20dp"
-                android:text="关于"
+                android:text="帮助中心"
                 android:textColor="#272636"
                 android:textSize="@dimen/title_text_size"/>
 
@@ -80,66 +80,14 @@
 
             >
 
-            <android.support.percent.PercentFrameLayout
+            <WebView
+                android:id="@+id/web"
                 android:layout_width="match_parent"
-                app:layout_heightPercent="35%"
-                app:layout_marginTopPercent="0.2%"
-                android:background="#fff">
+                android:layout_height="match_parent"
+                android:overScrollMode="never"
+                android:scrollbars="none">
 
-                <ImageView
-                    app:layout_widthPercent="25%"
-                    app:layout_heightPercent="50%"
-                    app:layout_marginTopPercent="15%"
-                    android:layout_gravity="center_horizontal"
-                    android:src="@drawable/erweima"
-                    />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_marginTopPercent="67%"
-                    android:layout_gravity="center_horizontal"
-                    android:text="华善金融"
-                    android:textSize="12dp"
-                    android:textColor="#fa000000"/>
-
-            </android.support.percent.PercentFrameLayout>
-
-
-            <android.support.percent.PercentFrameLayout
-                android:layout_width="match_parent"
-                app:layout_heightPercent="10%"
-                app:layout_marginTopPercent="35.3%"
-                android:background="#fff">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    app:layout_marginLeftPercent="5%"
-                    android:text="版本更新"
-                    android:textColor="#fa000000"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical|right"
-                    app:layout_marginRightPercent="5%"
-                    android:text="有更新3.9.2"
-                    android:textSize="12dp"
-                    android:textColor="#fa000000"/>
-
-            </android.support.percent.PercentFrameLayout>
-
-            <TextView
-                android:id="@+id/hint_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_marginTopPercent="48%"
-                android:gravity="center"
-                android:text="金融客服（9:00-21:00）0971-8011979"
-                />
-
+            </WebView>
 
 
         </android.support.percent.PercentFrameLayout>
