--- a/HuaShanApp/app/src/main/res/layout/activity_authenticated.xml
+++ b/HuaShanApp/app/src/main/res/layout/activity_authenticated.xml
@@ -158,9 +158,10 @@
 
             </android.support.percent.PercentFrameLayout>
 
-
+            <!--银行卡-->
             <android.support.v7.widget.CardView
                 xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/bankcard"
                 app:layout_widthPercent="90%"
                 app:layout_heightPercent="17%"
                 app:layout_marginTopPercent="55%"
@@ -176,6 +177,7 @@
                     android:layout_height="match_parent">
 
                     <ImageView
+                        android:id="@+id/img_logo"
                         app:layout_widthPercent="10%"
                         app:layout_heightPercent="24%"
                         android:src="@drawable/zgyh_icon"
