--- a/HuaShanApp/app/src/main/res/layout/fragment_my.xml
+++ b/HuaShanApp/app/src/main/res/layout/fragment_my.xml
@@ -181,7 +181,8 @@
                     <android.support.percent.PercentFrameLayout
                         android:layout_width="match_parent"
                         android:layout_height="70dp"
-                        android:background="#fff">
+                        android:background="#fff"
+                        android:onClick="@{handler.Myfinance}">
 
                         <ImageView
                             app:layout_widthPercent="6%"
