--- a/HuaShanApp/app/src/main/res/layout/layout_titlebar_item.xml
+++ b/HuaShanApp/app/src/main/res/layout/layout_titlebar_item.xml
@@ -4,6 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:gravity="center"
     android:orientation="vertical">
 
     <FrameLayout
@@ -28,8 +30,10 @@
         android:layout_height="45dp"
 
         android:gravity="center"
+        android:layout_gravity="center"
         android:text="Text"
         android:textSize="15dp"
+        android:textColor="#4f4f4f"
         />
 
 
